# djangorm

./: .gitignore  README.md  __init__.py  demo.py  djangorm.py  pyproject.toml
test/: __init__.py  models.py
tests/: __init__.py  models.py  test_user.py
